--- a/job-portal-server/.env
+++ b/job-portal-server/.env
@@ -1,4 +1,3 @@
-DB_USER="zopesaurav3564"
-DB_PASSWORD="mf3jhGdaiYnDOFsH"
-MONGO_URL= mongodb+srv://${process.env.DB_USER}:${process.env.DB_PASSWORD}@cluster0.qbku1ed.mongodb.net/?retryWrites=true&w=majority;
+
+MONGO_URL= mongodb+srv://zopesaurav3564:mf3jhGdaiYnDOFsH@cluster0.qbku1ed.mongodb.net/;
 PORT=5000;
