--- a/job-portal-server/package.json
+++ b/job-portal-server/package.json
@@ -1,10 +1,10 @@
 {
   "name": "job-portal-server",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js",
-    "build": "mpm i"
+    "start": "nodemon index.js",
+    "build": "npm i"
   },
   "author": "",
   "license": "ISC",
